[package]
name = "renzora"
version = "0.1.10"
edition = "2021"
description = "CLI for the Renzora game engine — scaffold projects and drive the pinned containerized toolchain."
license = "MIT OR Apache-2.0"
repository = "https://github.com/renzora/cli"
homepage = "https://github.com/renzora/engine"
readme = "README.md"
keywords = ["renzora", "gamedev", "engine", "cli"]
categories = ["command-line-utilities", "development-tools"]

# `cargo install renzora` puts the `renzora` command on PATH. Tiny standalone
# binary (clap + process orchestration) — no engine deps; it drives Docker.
[[bin]]
name = "renzora"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
# Tiny, pure-Rust SHA-256 (no TLS/async) to tag the toolchain image by a hash
# of the Dockerfile so a checkout pins to its matching image.
sha2 = "0.10"
